[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Gizmo Head <benjamin.potzmann@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
regex = "1.5"
transpose = "0.2.1"

[[bin]]
name = "day4"
path = "day_4/main.rs"

